Return "auto" for computed z-index on non-stacking-context element

Following https://codereview.chromium.org/2047283002 we were returning
"0" for getComputedStyle(element).zIndex for elements that were not
stacking contexts. Previously we would return "auto". Both behaviours
are incorrect.

This patch reverts the change in getComputedStyle() behaviour back
to "auto".

BUG=656681

Review-Url: https://chromiumcodereview.appspot.com/2439663002
Cr-Commit-Position: refs/heads/master@{#426690}

Former-commit-id: 664d4716b91e01c779a77702e9f219c2744724e0